# solana-etl

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build_proto.rs
.github/workflows/: extractor-build.yaml  inserter-build.yaml  lint.yaml  pipeline.yaml
docs/: README.md  bigquery-release-notes.md  deserialization.md  environment-variables.md  etl-infrastructure-architecture.md  extraction.md  features.md  getting-started.md  protobuf.md
iac/: README.md
iac/init/: main.tf
iac/main/: .gitignore  .terraform.lock.hcl  bq.tf  cloudnat.tf  compute-engine.tf  firewall.tf  iam.tf  network.tf  plan  provider.tf  terraform.tfstate  variables.tf
iac/main/schemas/: Block Rewards.json  Blocks.json  Token Transfers.json  Tokens.json  Transactions.json
iac/scripts/indexer/: indexer-service.sh
iac/scripts/inserter/: inserter-service.sh
iac/scripts/rabbit-mq/: run-rabbit.sh
iac/scripts/rabbitmq/: run-rabbit.sh
iac/scripts/solana-rpc/: configure-solana-disks.sh  solana-install.sh
scripts/: setup.sh  upload_to_gcs.sh
src/: README.md  benchmark.rs  constants.rs  features.rs  lib.rs  main.rs  request.rs
src/metrics/: mod.rs
src/output/: README.md  google_pubsub.rs  json.rs  jsonl.rs  mod.rs  publish.rs  rabbitmq_classic.rs  rabbitmq_stream.rs  single_stream_publisher.rs
src/output/tests/: mod.rs
src/solana_config/: .gitignore  LICENSE  README.md  accounts.rs  build_proto.rs  constants.rs  lib.rs  mod.rs  streampublisher.rs  tokens.rs  transactions.rs
src/solana_config/data_sources/: bigtable.rs  json_rpc.rs  mod.rs
src/solana_config/docs/: lib.md  protobuf.md  types.md
src/solana_config/proto_codegen/: account_info.rs  confirmed_block.rs  etl_block.rs  mod.rs  records_int_timestamp.rs  records_string_timestamp.rs  transaction_by_addr.rs
src/solana_config/proto_conversions/: account.rs  block.rs  mod.rs
src/solana_config/proto_src/: account_info.proto  confirmed_block.proto  etl_block.proto  records_int_timestamp.proto  records_string_timestamp.proto  transaction_by_addr.proto
src/solana_config/schemas/: accounts_schema.json  instructions_schema.json
src/solana_config/tests/: mod.rs  solana.rs
src/solana_config/transformation/: account.rs  block.rs  instruction.rs  mod.rs  token_transfer.rs  transaction.rs
src/solana_config/types/: account_response_types.rs  block_response_types.rs  blockheight_response_types.rs  blocks_with_limit_response_types.rs  mod.rs  request_types.rs  slot_response_types.rs
src/source/: README.md  config.rs  json_rpc.rs  mod.rs
storage-write/: README.md  run_all.py
storage-write/deprecated/: account.go  bq_conversions.go  go.mod  go.sum  main.go  run_protoc.sh
storage-write/deprecated/constants/: constants.go
storage-write/deprecated/insertion/: insertion.go
storage-write/deprecated/protos/: account_info.pb.go  confirmed_block.pb.go  etl_block.pb.go  records.pb.go  transaction_by_addr.pb.go
storage-write/docs/: env.md
storage-write/subscriber_rabbitmq/: go.mod  go.sum  main.go
(+12 files in other folders)
